Fix ReferencedKeySet::add